Feat/optimize test (#116)
* feat: optimize test